# weblangchain

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
.github/workflows/: deploy-production.yaml
nextjs/: .env.example  next.config.js  package.json
nextjs/app/: globals.css  layout.tsx  page.tsx
nextjs/app/api/chat/stream_log/: route.ts
nextjs/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx  DefaultQuestion.tsx  EmptyState.tsx  InlineCitation.tsx  SourceBubble.tsx
